tests/baselines/reference/checkJsFiles.errors.txt
tests/cases/compiler/a.js(2,1): error TS2322: Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/a.js (1 errors) ====
    var x = "string";
    x = 0;
    ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.